@@ -36,7 +36,7 @@ class tx_seminars_Model_BackEndUser extends tx_oelib_Model_BackEndUser {
 	/**
 	 * Returns the PID for newly created event records.
 	 *
-	 * This will be the first PID found in the user's groups greater than zero
+	 * This will be the first set PID found in the user's groups.
 	 *
 	 * @return integer the PID for newly created event records, will be 0 if no
 	 *                 group has a PID set for new event records
@@ -48,7 +48,7 @@ class tx_seminars_Model_BackEndUser extends tx_oelib_Model_BackEndUser {
 	/**
 	 * Returns the PID for newly created registration records.
 	 *
-	 * This will be the first PID found in the user's groups greater than zero
+	 * This will be the first set PID found in the user's groups.
 	 *
 	 * @return integer the PID for newly created registration records, will be
 	 *                 0 if no group has a PID set for new registration records
@@ -58,12 +58,25 @@ class tx_seminars_Model_BackEndUser extends tx_oelib_Model_BackEndUser {
 	}
 
 	/**
+	 * Returns the PID for newly created auxiliary records.
+	 *
+	 * This will be the first set PID found in the user's groups.
+	 *
+	 * @return integer the PID for newly created auxiliary records, will be
+	 *                 0 if no group has a PID set for new auxiliary records
+	 */
+	public function getAuxiliaryRecordsFolder() {
+		return $this->getRecordFolderFromGroup('auxiliary');
+	}
+
+	/**
 	 * Returns the PID for newly created records of the given type.
 	 *
-	 * This will be the first PID found in the user's groups greater than zero
+	 * This will be the first set PID found in the user's groups.
 	 *
 	 * @param string $type
-	 *        the type of the record, must be "event" or "registration"
+	 *        the type of the record, must be "event", "registration" or
+	 *        "auxiliary"
 	 *
 	 * @return integer the PID for newly created records, will be 0 if no group
 	 *                 has a PID set for new records of the given type
@@ -83,6 +96,9 @@ class tx_seminars_Model_BackEndUser extends tx_oelib_Model_BackEndUser {
 					break;
 				case 'registration':
 					$recordFolderPid = $group->getRegistrationFolder();
+					break;
+				case 'auxiliary':
+					$recordFolderPid = $group->getAuxiliaryRecordFolder();
 					break;
 				default:
 					throw new Exception(
