@@ -52,6 +52,19 @@ class tx_seminars_Model_BackEndUserGroup extends tx_oelib_Model_BackEndUserGroup
 	public function getRegistrationFolder() {
 		return $this->getAsInteger('tx_seminars_registrations_folder');
 	}
+
+	/**
+	 * Returns the PID for the storage of auxiliary records.
+	 *
+	 * Auxiliary records are all seminars record types with the exception of
+	 * events and registrations.
+	 *
+	 * @return integer the PID for the storage of new auxiliary records, will
+	 *                 be 0 if no PID has been set
+	 */
+	public function getAuxiliaryRecordFolder() {
+		return $this->getAsInteger('tx_seminars_auxiliaries_folder');
+	}
 }
 
 if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/seminars/Model/class.tx_seminars_Model_BackEndUserGroup.php']) {
