@@ -215,6 +215,7 @@
 			<label index="be_groups.tab_event_management">Event management</label>
 			<label index="be_groups.tx_seminars_events_folder">Sysfolder for new events</label>
 			<label index="be_groups.tx_seminars_registrations_folder">Sysfolder for new registrations</label>
+			<label index="be_groups.tx_seminars_auxiliaries_folder">Sysfolder for new auxiliary records</label>
 		</languageKey>
 		<languageKey index="de" type="array">
 			<label index="moduleFunction.tx_seminars_modfunc1">Seminare</label>
@@ -421,8 +422,9 @@
 			<label index="fe_groups.tx_seminars_default_categories">Default-Kategorien:</label>
 			<label index="owner_feuser">Frontend-User, der diesen Datensatz eingetragen hat:</label>
 			<label index="be_groups.tab_event_management">Veranstaltungsverwaltung</label>
-			<label index="be_groups.tx_seminars_events_folder">SysFolder für neue Veranstaltungen</label>
-			<label index="be_groups.tx_seminars_registrations_folder">SysFolder für neue Anmeldungen</label>
+			<label index="be_groups.tx_seminars_events_folder">SysOrdner für neue Veranstaltungen</label>
+			<label index="be_groups.tx_seminars_registrations_folder">SysOrdner für neue Anmeldungen</label>
+			<label index="be_groups.tx_seminars_auxiliaries_folder">SysOrdner für neue Hilfsdatensätze</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
 			<label index="moduleFunction.tx_seminars_modfunc1">Seminars</label>
@@ -1386,6 +1388,7 @@
 			<label index="be_groups.tab_event_management" type="integer">136062963</label>
 			<label index="be_groups.tx_seminars_events_folder" type="integer">177662722</label>
 			<label index="be_groups.tx_seminars_registrations_folder" type="integer">253295245</label>
+			<label index="be_groups.tx_seminars_auxiliaries_folder" type="integer">87229819</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
 			<label index="moduleFunction.tx_seminars_modfunc1" type="integer">146176001</label>
@@ -2350,6 +2353,7 @@
 			<label index="be_groups.tab_event_management">Event management</label>
 			<label index="be_groups.tx_seminars_events_folder">Sysfolder for new events</label>
 			<label index="be_groups.tx_seminars_registrations_folder">Sysfolder for new registrations</label>
+			<label index="be_groups.tx_seminars_auxiliaries_folder">Sysfolder for new auxiliary records</label>
 		</languageKey>
 		<languageKey index="dk" type="array">
 			<label index="moduleFunction.tx_seminars_modfunc1">Seminars</label>
